# VSCode-CMake-Project-Template

./: CMakeLists.txt  README.md
src/main/: Main.cpp
